--- a/views/kucuncelue.xml
+++ b/views/kucuncelue.xml
@@ -9,10 +9,10 @@
           <field name="cangku"/>
           <field name="beijianext"/>
           <field name="zaikushuliang"/>
-          <field name="xiaxianbaojing"/>
+          <field name="xiaxianbaojing" invisible="1"/>
           <field name="xiaxian"
             attrs="{'invisible': [('xiaxianbaojing','=',False)]}"/>
-          <field name="shangxianbaojing"/>
+          <field name="shangxianbaojing" invisible="1"/>
           <field name="shangxian"
             attrs="{'invisible': [('shangxianbaojing','=',False)]}"/>
           <field name="baojingdengji"
