--- a/views/ruku_queren_wizard.xml
+++ b/views/ruku_queren_wizard.xml
@@ -1,39 +1,48 @@
 <odoo>
   <data>
     <record model="ir.ui.view" id="rukuqueren_wizard_view">
-        <field name="name">入库确认</field>
+        <field name="name">请确认仔细入库信息</field>
         <field name="model">wms.wizard.rukuqueren</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
-        	<form string="入库确认">
-            <group>
-                <h2 style="margin-top:-8px" colspan="2">在<field name="cangkuname" style="color:#7c7bad" attrs="{'readonly': True}"/>仓库中选择一个货位，今后用于专门存放<field name="beijianfull" style="color:#7c7bad" attrs="{'readonly': True}"/>。</h2>
-                <div class="oe_title" colspan="2">
-                  <label for="bianma" string="选择的货位是" style="font-weight:bold;font-size:14px"/>
-                  <h3><field name="bianma" placeholder="如：A-01-02-03" widget="enter_to_submit_field" default_focus="1"/></h3>
-                </div>
-            </group>
-            <group string="编码规则">
-              <label colspan="2" string="常见的编码方法：区号-排号-层号-位号。"/>
-              <label colspan="2" string="可以根据仓库的实际情况，自行决定编码规则，确定编码规则后，后续编码都要遵循此规则，以快速确定物品存放位置。"/>
-            </group>
-            <footer>
-                <button name="save_huowei" string="保存" type="object" class="btn-primary enter_to_submit_button"/>
+        	<form string="请确认仔细入库信息">
+            <header>
+          	    <field name="state" widget="statusbar"/>
+          	</header>
+            <h2>请确认仔细入库信息</h2>
+        	  <group attrs="{'invisible': [('state','!=','confirm')]}">
+                <field name="image" readonly="1" widget="image" class="oe_avatar"/>
+
+                <group>
+                  <field name="beijianfull" readonly="1"/>
+                  <field name="huowei" readonly="1"/>
+                  <field name="rukushuliang" readonly="1"/>
+                </group>
+                <group>
+                  <field name="changjia" readonly="1"/>
+                  <field name="shengchanriqi" readonly="1"/>
+                  <field name="pihao" readonly="1"/>
+                </group>
+                <group attrs="{'invisible': [('rukushuliang','==',1)]}">
+                  <div colspan="2">
+                    <p><b>⚠️ 注意</b>：一次性入库<field name="rukushuliang" readonly='1'/>个备件，请务必确定每个备件：</p><ol><li>都是<b>同一厂家</b>生产；</li><li>都是同一<b>生产日期</b>；</li><li>都是同一<b>批号</b>。</li></ol><p>若有不同者，请修改入库数量，并分多次入库。</p>
+                  </div>
+                </group>
+          	</group>
+
+          	<group attrs="{'invisible': [('state','!=','complete')]}">
+                <h2>入库成功!</h2>
+          	</group>
+
+            <footer style="text-align:center">
                 <button string="取消" class="btn-default" special="cancel"/>
+                <span style="display:inline-block;width:20px"></span>
+                <button name="save_geti" string="入 库 √" type="object" class="btn-primary enter_to_submit_button"/>
             </footer>
+
           </form>
         </field>
     </record>
-
-    <!-- <record id="newhuowei_wizard_act_window" model="ir.actions.act_window">
-        <field name="name">新增货位</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wms.wizard.newhuowei</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="newhuowei_wizard_view"/>
-        <field name="target">new_no_close</field>
-    </record> -->
 
   </data>
 </odoo>
