--- a/views/ruku_wizard.xml
+++ b/views/ruku_wizard.xml
@@ -55,19 +55,7 @@
                 <field name="pihao" colspan="10"/>
           	</group>
             <group attrs="{'invisible': [('state','!=','confirm')]}">
-                <!-- <h3 colspan="10" style="text-align:center;color:#7c7bad;margin-top:-8px">
-                  <field name="info" readonly="1"
-                    attrs="{'invisible': [('state','!=','fillform')]}"/>
-                </h3>
-                <field name="rukushuliang" readonly='1'/> -->
-                <!--,('rukushuliang','&lt;',1)  -->
-                <!-- <div class="ruku_warn" attrs="{'invisible': [('rukushuliang','==',1)]}">
-                  <p><b>⚠️ 注意</b>：一次性入库<b><field name="rukushuliang" readonly='1'/>个</b>备件，请务必确定这些备件的<b>厂家</b>、<b>生产日期</b>、<b>批号</b>都一致。不同<b>厂家</b>、<b>生产日期</b>、<b>批号</b>的备件，请分多次入库。</p>
-                </div> -->
-                <!-- <field name="huowei" readonly='1'/>
-                <field name="changjia" readonly="1"/>
-                <field name="shengchanriqi" readonly="1"/>
-                <field name="pihao" readonly="1"/> -->
+              
           	</group>
             <footer style="text-align:center">
                 <button string="&lt; 上一步" type="object" name="progress_prev"
@@ -76,8 +64,8 @@
                   attrs="{'invisible': [('state','==','selcangku')]}"></span>
                 <button string="下一步 &gt;" type="object" name="progress_next"
                   class="btn-primary" attrs="{'invisible': [('state','==','confirm')]}"/>
-                <button string="入 库 √" type="object" name="progress_next"
-                  class="btn-primary" attrs="{'invisible': [('state','!=','confirm')]}"/>
+                <!-- <button string="入 库 √" type="object" name="progress_next"
+                  class="btn-primary" attrs="{'invisible': [('state','!=','confirm')]}"/> -->
             </footer>
           </form>
         </field>
