--- a/views/templates.xml
+++ b/views/templates.xml
@@ -9,6 +9,9 @@
         <xpath expr='//script[@src="/web/static/src/js/chrome/control_panel.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/control_panel.js"></script>
         </xpath>
+        <xpath expr='//script[@src="/web/static/src/js/chrome/abstract_web_client.js"]' position='replace'>
+            <script type="text/javascript" src="/wms/static/src/js/abstract_web_client.js"></script>
+        </xpath>
         <!-- <xpath expr='//script[@src="/web/static/src/js/fields/basic_fields.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/basic_fields.js"></script>
         </xpath> -->
