--- a/views/ruku_wizard.xml
+++ b/views/ruku_wizard.xml
@@ -50,12 +50,12 @@
                   name="newhuowei_wizard_act_window"
                   context="{'cangku': cangku, 'beijianext': beijianext, 'wizard': active_id}"/>
                 <field name="changjia" colspan="10"
-                  domain="['|', ('beijian', '=', beijian), ('beijian', '=', False)]"/>
+                  domain="['|', ('beijian', '=', beijian), ('beijian', '=', False)]" options="{'no_create': True}"/>
                 <field name="shengchanriqi" colspan="10"/>
                 <field name="pihao" colspan="10"/>
           	</group>
             <group attrs="{'invisible': [('state','!=','confirm')]}">
-              
+
           	</group>
             <footer style="text-align:center">
                 <button string="&lt; 上一步" type="object" name="progress_prev"
