--- a/views/web_customize.xml
+++ b/views/web_customize.xml
@@ -2,8 +2,8 @@
     <template id="menu_secondary" inherit_id="web.menu_secondary">
         <xpath expr='//div[@class="o_sub_menu_footer"]' position='replace'>
           <div class="o_sub_menu_footer">
-              仓库管理员 <span style="color:#875a7b;">13315821782</span><br/>
-              技术支持   <span style="color:#875a7b;">13315821782</span>
+              仓库管理员电话 <span style="color:#875a7b;">13315821782</span><br/>
+              技术支持 电话  <span style="color:#875a7b;">13315821782</span>
           </div>
         </xpath>
     </template>
