--- a/views/geti.xml
+++ b/views/geti.xml
@@ -24,30 +24,40 @@
       <field name="model">wms.geti</field>
       <field name="arch" type="xml">
         <form create="false" edit="false">
-          <field name="cangku" invisible="1"/>
-          <field name="image" widget="zoomable_image" class="oe_avatar"/>
-          <div class="oe_title">
-            <button name="chuku" string="出库" type="object" class="btn btn-primary"
-              attrs="{'invisible': [('zhuangtai', '=', 'chuku')]}"/>
-          </div>
-          <group>
+          <sheet>
+            <field name="cangku" invisible="1"/>
+            <field name="image" widget="zoomable_image" class="oe_avatar"/>
+            <div class="oe_title">
+              <button name="chuku" string="出库" type="object" class="btn btn-primary"
+                attrs="{'invisible': [('zhuangtai', '=', 'chuku')]}"/>
+            </div>
             <group>
-              <field name="beijian" readonly="1"/>
-              <field name="beijianext" readonly="1"/>
-              <field name="shiyongshebei" readonly="1" widget="many2many_tags"/>
+              <group>
+                <field name="beijian" readonly="1"/>
+                <field name="beijianext" readonly="1"/>
+                <field name="shiyongshebei" readonly="1" widget="many2many_tags"/>
+              </group>
+              <group>
+                <field name="xuliehao" readonly="1"/>
+                <field name="zhuangtai" readonly="1"/>
+                <field name="huowei" readonly="1"
+                  attrs="{'invisible': [('zhuangtai', '=', 'chuku')]}"/>
+                <field name="cangku" readonly="1"
+                  attrs="{'invisible': [('zhuangtai', '!=', 'chuku')]}"/>
+              </group>
             </group>
             <group>
-              <field name="xuliehao" readonly="1"/>
-              <field name="zhuangtai" readonly="1"/>
-              <field name="huowei" readonly="1"/>
+              <group>
+                <field name="changjia" readonly="1"/>
+                <field name="pihao" readonly="1"/>
+              </group>
+              <group>
+                <field name="shengchanriqi" readonly="1"/>
+                <field name="jianceriqi" readonly="1"/>
+              </group>
             </group>
-          </group>
-          <group>
-            <field name="changjia" class=""/>
-            <field name="pihao" class=""/>
-            <field name="shengchanriqi" class=""/>
-            <field name="lishijilu" class=""/>
-          </group>
+            <field name="lishijilu" readonly="1"/>
+          </sheet>
         </form>
       </field>
     </record>
