--- a/views/geti.xml
+++ b/views/geti.xml
@@ -33,7 +33,7 @@
                 confirm="此操作不可撤销，是否继续出库？    (如误操作，请联系系统管理员。)"/>
               <span style="display:inline-block;width:10px"></span>
               <button name="jiance" string="检测通过" type="object" class="btn btn-default"
-                attrs="{'invisible': ['|',('zhuangtai', '!=', 'zaiku'),('jianceriqi','=',False)]}"
+                attrs="{'invisible': ['|',('zhuangtai', '!=', 'zaiku'),('jiancedaoqiri','=',False)]}"
                 confirm="此操作不可撤销，是否确定检测已通过？    (如误操作，请联系系统管理员。)"/>
               <span style="display:inline-block;width:10px"></span>
               <button name="baofei" string="报废" type="object" class="btn btn-default"
@@ -62,7 +62,7 @@
               </group>
               <group>
                 <field name="shengchanriqi" readonly="1"/>
-                <field name="jianceriqi" readonly="1"/>
+                <field name="jiancedaoqiri" readonly="1"/>
               </group>
             </group>
             <field name="lishijilu" readonly="1"/>
