本仓库默认展开。施工中。。。

--- a/views/templates.xml
+++ b/views/templates.xml
@@ -12,6 +12,9 @@
         <xpath expr='//script[@src="/web/static/src/js/chrome/abstract_web_client.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/abstract_web_client.js"></script>
         </xpath>
+        <xpath expr='//script[@src="/web/static/src/js/views/basic/basic_model.js"]' position='replace'>
+            <script type="text/javascript" src="/wms/static/src/js/basic_model.js"></script>
+        </xpath>
         <!-- <xpath expr='//script[@src="/web/static/src/js/fields/basic_fields.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/basic_fields.js"></script>
         </xpath> -->
