更新检验年限后，对所有个体的待检验时间进行更新

--- a/views/beijian.xml
+++ b/views/beijian.xml
@@ -21,8 +21,8 @@
               <field name="jiancebaojing"/>
               <field name="jiancezhouqi"
                 attrs="{'invisible': [('jiancebaojing','=',False)]}"/>
-              <field name="baojingdengji"
-                attrs="{'invisible': [('jiancebaojing','=',False)]}"/>
+              <!-- <field name="baojingdengji"
+                attrs="{'invisible': [('jiancebaojing','=',False)]}"/> -->
             </group>
           </sheet>
         </form>
