--- a/views/cangkuyonghu.xml
+++ b/views/cangkuyonghu.xml
@@ -56,13 +56,13 @@
       </field>
     </record>
 
-    <record id="cangkuyonghu_act_window" model="ir.actions.act_window">
+    <!-- <record id="cangkuyonghu_act_window" model="ir.actions.act_window">
       <field name="name">用户管理</field>
       <field name="type">ir.actions.act_window</field>
       <field name="res_model">res.users</field>
       <field name="view_type">form</field>
       <field name="view_mode">tree,form</field>
-    </record>
+    </record> -->
 
     <record model="ir.actions.act_window.view" id="cangkuyonghu_list_view_">
       <field name="act_window_id" ref="cangkuyonghu_act_window"/>
