--- a/views/huowei.xml
+++ b/views/huowei.xml
@@ -2,14 +2,37 @@
   <data>
 
     <record model="ir.ui.view" id="huowei_list_view">
-      <field name="name">货位清单列表视图</field>
+      <field name="name">货位列表列表视图</field>
       <field name="model">wms.huowei</field>
       <field name="arch" type="xml">
-        <tree>
+        <tree create="false">
           <field name="complete_bianma"/>
           <field name="beijianext"/>
           <field name="beijian_count"/>
+          <field name="kucuncelue" invisible="1"/>
         </tree>
+      </field>
+    </record>
+
+    <record id="huowei_form_view" model="ir.ui.view">
+      <field name="name">货位列表表视图</field>
+      <field name="model">wms.huowei</field>
+      <field name="arch" type="xml">
+        <form create="false">
+          <sheet>
+            <group>
+              <group>
+                <field name="bianma"/>
+                <field name="cangku" readonly="1"/>
+              </group>
+              <group>
+                <field name="beijianext" readonly="1"/>
+                <field name="beijian_count"/>
+              </group>
+            </group>
+            <field name="geti"/>
+          </sheet>
+        </form>
       </field>
     </record>
 
@@ -18,28 +41,17 @@
         <field name="model">wms.huowei</field>
         <field name="arch" type="xml">
             <search>
-
+              <field name="kucuncelue"/>
             </search>
         </field>
     </record>
 
-    <!-- <record id="huowei_act_window" model="ir.actions.act_window">
-      <field name="name">货位清单</field>
+    <record id="huowei_act_window" model="ir.actions.act_window">
+      <field name="name">货位列表</field>
       <field name="type">ir.actions.act_window</field>
-      <field name="res_model">wms.huowei</field>
       <field name="view_type">form</field>
       <field name="view_mode">tree,form</field>
-    </record> -->
-
-    <record id="huowei_act_window" model="ir.actions.server">
-      <field name="name">货位清单</field>
-      <field name="model_id" ref="model_wms_huowei"/>
-      <field name="state">code</field>
-      <field name="code">if len(user.cangku.child_id) > 0:
-    action = {"type": "ir.actions.act_window", "name":"货位清单","view_type":"form", "view_mode": "tree,form", "res_model": "wms.huowei", "context": {'group_by':'cangku'}}
-else:
-    action = {"type": "ir.actions.act_window", "name":"货位清单","view_type":"form", "view_mode": "tree,form", "res_model": "wms.huowei"}
-      </field>
+      <field name="res_model">wms.huowei</field>
     </record>
 
   </data>
