--- a/views/kucuncelue.xml
+++ b/views/kucuncelue.xml
@@ -11,10 +11,9 @@
           <field name="zaikushuliang"/>
           <field name="xiaxianbaojing" invisible="1"/>
           <field name="xiaxian"/>
-            <!-- attrs="{'invisible': [('xiaxianbaojing','=',False)]}"/> -->
           <field name="shangxianbaojing" invisible="1"/>
           <field name="shangxian"/>
-            <!-- attrs="{'invisible': [('shangxianbaojing','=',False)]}"/> -->
+          <field name="huoweishuliang"/>
           <!-- <field name="baojingdengji"/> -->
         </tree>
       </field>
@@ -24,12 +23,25 @@
       <field name="name">备件库存策略表视图</field>
       <field name="model">wms.kucuncelue</field>
       <field name="arch" type="xml">
-        <form>
+        <form create="false" delete="false">
           <sheet>
-            <group>
-              <field name="beijianext" readonly="1"/>
-              <field name="cangku" readonly="1"/>
-            </group>
+            <div class="oe_button_box" name="button_box">
+                <button class="oe_stat_button" name="%(wms.huowei_act_window)d" icon="fa-th-list" type="action" context="{'search_default_kucuncelue':active_id}">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_text">货位列表</span>
+                        <span class="o_stat_value">(共<field name="huoweishuliang"/>个)</span>
+                    </div>
+                </button>
+                <button class="oe_stat_button" name="%(wms.newhuowei_wizard_act_window)d" icon="fa-plus-circle" type="action" context="{'cangku':cangku,'beijianext':beijianext}">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_text">添加货位</span>
+                    </div>
+                </button>
+            </div>
+            <div class="oe_title">
+                <h1><field name="beijianext" readonly="1"/></h1>
+                <h3><field name="cangku" readonly="1"/></h3>
+            </div>
             <group>
               <field name="zaikushuliang" readonly="1"/>
             </group>
@@ -48,7 +60,6 @@
                 attrs="{'invisible': [('shangxianbaojing','=',False),
                                       ('xiaxianbaojing','=',False)]}"/>
             </group> -->
-            <field name="huowei" readonly="1"/>
           </sheet>
         </form>
       </field>
