--- a/views/jiancebaojing_sqlview.xml
+++ b/views/jiancebaojing_sqlview.xml
@@ -5,11 +5,12 @@
       <field name="name">检测报警列表视图</field>
       <field name="model">wms.sqlview.jiancebaojing</field>
       <field name="arch" type="xml">
-        <tree create="false" delete="false" default_order="jiancedaoqiri" decoration-danger="baojingdengji in ('1', '-1')" decoration-warning="baojingdengji == '2'" decoration-info="baojingdengji == '3'">
+        <tree create="false" delete="false" default_order="shengyutianshu asc" decoration-danger="baojingdengji in ('1', '-1')" decoration-warning="baojingdengji == '2'" decoration-info="baojingdengji == '3'">
           <field name="geti"/>
           <field name="beijianext"/>
           <field name="huowei"/>
           <field name="jiancedaoqiri"/>
+          <field name="shengyutianshu"/>
           <field name="baojingdengji" invisible="1"/>
         </tree>
       </field>
